fixed overflow problem in the hero section and changed main display into flex

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,14 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
+/*added flex style to main*/
+main{
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  align-items: center;
+
+}
 
 a {
   color: inherit;
